# bevy_slow_text_outline

./: CHANGELOG.md  Cargo.toml  README.md
examples/: ui_demo.rs
src/: plugin.rs  text_outline_rendering.rs
